# GasBrine_PHREEQC

./: GasSouring.phr  GeoChem.cpp  GeoChem.h  GeoChemEnvironment.cpp  GeoChemEnvironment.h  ISolutionComp.cxx  InputManager.cpp  InputManager.h  KineticsComp.cxx  NameDouble.cxx  NumKeyword.cxx  PHRQ_io.cpp  Phreeqc.cpp  Phreeqc.h  Phreeqc_ReSoC.h  ReadIn.cpp  ShenhuaCO2.phr  System.cxx  UtilIO.h  basicsubs.cpp  class_main.cpp  inverse.cpp  isotopes.cpp  logError.cpp  logError.h  main.cpp  mainsubs.cpp  model.cpp  nvector_serial.cpp  parse.cpp  pitzer.cpp  pitzer_structures.cpp  prep.cpp  print.cpp  read.cpp  readtr.cpp  sit.cpp  step.cpp  structures.cpp  tally.cpp  (+3 more)
CH4_Solubility/: CH4SolubilityInBrine.cpp  CH4SolubilityInBrine.h  CH4SolubilityInWater.cpp  CH4SolubilityInWater.h
CO2_solubility_in_NaCl_solution/: CO2SoluInBrine.cpp  CO2SoluInBrine.h
CO2_solubility_in_pure_water/: CO2SoluInWater.cpp  CO2SoluInWater.h  CO2_in_Water_exp.txt
CO2_solubility_with_minerals/: CO2_solubility_mineral.cpp  CO2_solubility_mineral.h
Caclite_solubilty/: CalciteSolubility.cpp  CalciteSolubility.h
DolomiteSolubility/: DolomiteSolubility.cpp  DolomiteSolubility.h
Dolomitization/: Dolomitization.cpp  Dolomitization.h
EOS/: Component.cpp  Component.h  EOSPhaseProp.cpp  EOSPhaseProp.h  (+3 more)
Framework/: Base.h  CMakeLists.txt
Framework/Common/: Exception.cpp  Exception.h  Macro.h  UtilitiesF.cpp  UtilitiesF.h
Framework/Util/: UtilFile.cpp  UtilFile.h  UtilLog.cpp  UtilLog.h  UtilOption.cpp  UtilOption.h  UtilSingleton.h  UtilString.cpp  UtilString.h  UtilTime.cpp  UtilTime.h
(+44 files in other folders)
